Update old write.as links

--- a/posts/blog/20250104-3ds-vs-vita.md
+++ b/posts/blog/20250104-3ds-vs-vita.md
@@ -4,7 +4,7 @@ title: "Pocket Gaming Time Machine: 3DS vs. Vita in 2025"
 date: 2025-01-04
 ---
 
-The New Nintendo 2DS XL has been my daily driver handheld for at least a year at this point, and I still love it. [I wrote a full review on it a while back](https://write.jacen.moe/the-nintendo-3ds-a-review-in-2024), but the main takeaway is that it has a good enough library of games and homebrew to make it usable 14 years after it was released.
+The New Nintendo 2DS XL has been my daily driver handheld for at least a year at this point, and I still love it. [I wrote a full review on it a while back](https://jacen.moe/blog/20240613-the-nintendo-3ds-a-review-in-2024/), but the main takeaway is that it has a good enough library of games and homebrew to make it usable 14 years after it was released.
 
 However, I've also heard PlayStation Vita users talking about how good their handheld was. As a portable tech enthusiast, I felt like I needed to get hands-on with the Vita to find out if it was really as good as people say it is.
 
