Tweak script formatting

--- a/posts/rants/20250512-rui-rant-2.md
+++ b/posts/rants/20250512-rui-rant-2.md
@@ -28,46 +28,48 @@ My first guess was that it was in the "It's On! Wonder Halloween!" event story, 
 
 I expected it to be toward the end, where Tsukasa is trying to re-recruit Rui into WxS. However, I still couldn't find it, so I started looking earlier into the story. As it turns out, it's much earlier in the story than I could have expected, all the way back in [episode 10](https://sekai.best/storyreader/unitStory/theme_park/1/10). It's available to view in-game or on [Sekai Viewer](https://sekai.best/), but here's a quick snippet for your convenience.
 
-```
-Rui: Tsukasa, I have some ideas for this play. Would you like to hear them?
+---
 
-Tsukasa: Oh, you already have something? Tell me, then, I'm curious.
+**Rui:** Tsukasa, I have some ideas for this play. Would you like to hear them?
 
-Rui: I'd like to emphasize the hardships the prince must suffer on his journey to make the audience sympathize with him more.
+**Tsukasa:** Oh, you already have something? Tell me, then, I'm curious.
 
-Tsukasa: Hmm, yes.
+**Rui:** I'd like to emphasize the hardships the prince must suffer on his journey to make the audience sympathize with him more.
 
-Rui: I think some lightning strikes would be excellent for this purpose.
+**Tsukasa:** Hmm, yes.
 
-Tsukasa: Hmm, yes... No, hold on!
+**Rui:** I think some lightning strikes would be excellent for this purpose.
 
-Emu: Zippy zaps! That's sooo cool!
+**Tsukasa:** Hmm, yes... No, hold on!
 
-Rui: Right? I brought along this plasma generator—
+**Emu:** Zippy zaps! That's sooo cool!
 
-Tsukasa: Wait a minute! Why do you even have a gizmo like that?!
+**Rui:** Right? I brought along this plasma generator—
 
-Rui: Oh, I thought it might come in handy.
+**Tsukasa:** Wait a minute! Why do you even have a gizmo like that?!
 
-Tsukasa: Who'd think that, ever?! Not to mention this must be incredibly dangerous!
+**Rui:** Oh, I thought it might come in handy.
 
-Rui: Don't worry, the device can be securely attached to the stage in a way that will keep the audience perfectly safe. Please make sure you don't touch it or you'll die.
+**Tsukasa:** Who'd think that, ever?! Not to mention this must be incredibly dangerous!
 
-Tsukasa: What about keeping ME safe?!
+**Rui:** Don't worry, the device can be securely attached to the stage in a way that will keep the audience perfectly safe. Please make sure you don't touch it or you'll die.
 
-Robo-Nene: And so it starts again...
+**Tsukasa:** What about keeping ME safe?!
 
-Emu: What does?
+**Robo-Nene:** And so it starts again...
 
-Robo-Nene: When Rui gets excited about an idea for a show, he just has to try it out.
+**Emu:** What does?
 
-Robo-Nene: He tried suspending classmates from ropes in the school gym, or holding them underwater in the pool...
+**Robo-Nene:** When Rui gets excited about an idea for a show, he just has to try it out.
 
-Robo-Nene: Everyone soon regrets signing up to do shows with him and starts to avoid him.
+**Robo-Nene:** He tried suspending classmates from ropes in the school gym, or holding them underwater in the pool...
 
-Emu: But why? It all sounds fun to me!
+**Robo-Nene:** Everyone soon regrets signing up to do shows with him and starts to avoid him.
 
-Robo-Nene: Maybe that's the problem, that there aren't more people as enthusiastic as you are, Emu...
-```
+**Emu:** But why? It all sounds fun to me!
+
+**Robo-Nene:** Maybe that's the problem, that there aren't more people as enthusiastic as you are, Emu...
+
+---
 
 So, there you have it. While not waterboarding, Rui has canonically attempted to drown a child in a pool. Make of that what you will.
