More blog thumbnails

--- a/posts/blog/20230327-tax-heaven-3000.md
+++ b/posts/blog/20230327-tax-heaven-3000.md
@@ -2,6 +2,7 @@
 layout: blog.html
 title: "Should You Give An Anime Girl Your SSN?"
 date: 2023-03-27
+thumbnail: "https://jacen-safe.s3.us-west-004.backblazeb2.com/IIJk0ugsva6g.png"
 ---
 
 [Tax Heaven 3000](https://taxheaven3000.com/) has taken over the Internet, partly by continuing the ever-present trend of weird visual novels, and partly due to the ever-present meme of giving an anime girl your personal information.
