Adding more thumbnails

--- a/posts/blog/20240614-3ds-review.md
+++ b/posts/blog/20240614-3ds-review.md
@@ -2,6 +2,7 @@
 layout: blog.html
 title: "The Nintendo 3DS: A Review in 2024"
 date: 2024-06-14
+thumbnail: "https://jacen-safe.s3.us-west-004.backblazeb2.com/4HQZ2UJKmqXh.png"
 ---
 
 A while back, a coworker of mine challenged me to a starter shiny hunt in Pokémon HeartGold. This led to me dusting off my old Nintendo 2DS XL and my copy of HeartGold to work on the hunt.
