Rui Rant 2 Thumbnail

--- a/posts/rants/20250512-rui-rant-2.md
+++ b/posts/rants/20250512-rui-rant-2.md
@@ -2,6 +2,7 @@
 layout: rant.html
 title: The Rui Kamishiro Rant Redux
 date: 2025-05-12
+thumbnail: https://jacen-safe.s3.us-west-004.backblazeb2.com/Zb5Nky4DBbjP.png
 ---
 Back when I did [my initial Rui rant](https://jacen.moe/rants/20230622-from-discord-the-rui-kamishiro-rant/), there was a detail that I wanted to include, but I chose to leave out. Now that I have more of the story, I feel I can revisit it.
 <!-- more -->
